syntax = "proto3";

package pipe;

message WarthogMessage {
    oneof message {
        WatchProject watch_project = 1;
    }
}

message WatchProject {
    string name = 1;
    string project_path = 2;
    optional int32 debounce_period = 3; // Debounce period in milliseconds
}

message Response {
    bool success = 1;
    string response_message = 2;
}
